--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load my_custom_tags %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -20,25 +21,18 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'blog/css/rtl.css' %}" rel="stylesheet" />
         <link href="{% static 'blog/css/styles.css' %}" rel="stylesheet" />
-
+        {% show_category %}
     </head>
     <body>
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
+        <nav class="navbar navbar-expand-lg" id="mainNav">
             <div class="container px-4 px-lg-5">
                 <a class="navbar-brand" href="{% url 'blog:home' %}">وبلاگ من</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'blog:home' %}">خانه</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="#">About</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="#">Sample Post</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="#">Contact</a></li>
-                    </ul>
-                </div>
+                {% show_category %}
             </div>
         </nav>
         {% block main %}
