--- a/templates/registration/_auth_base.html
+++ b/templates/registration/_auth_base.html
@@ -29,11 +29,11 @@
                             <div class="account-box-headline">
                                 <a href="login.html" class="login-ds active">
                                     <span class="title">ورود</span>
-                                    <span class="sub-title">به دیجی اسمارت</span>
+                                    <span class="sub-title">به سایت</span>
                                 </a>
                                 <a href="register.html" class="register-ds">
                                     <span class="title">ثبت نام</span>
-                                    <span class="sub-title">در دیجی اسمارت</span>
+                                    <span class="sub-title">در سایت</span>
                                 </a>
                             </div>
                             {% block content %}
