--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -33,6 +33,9 @@
                     <i class="fas fa-bars"></i>
                 </button>
                 {% show_category %}
+                {% if user.is_superuser or user.is_staff %}
+                <a href="{% url 'account:home' %}" class="navbar-brand">پنل ادمین</a>
+                {% endif %}
             </div>
         </nav>
         {% block main %}
