--- a/templates/registration/create_and_update_article.html
+++ b/templates/registration/create_and_update_article.html
@@ -14,7 +14,7 @@
             <h3 class="card-title float-left">اطلاعات را وارد کنید</h3>
         </div>
     <div class="card-body">
-    <form action="{% url 'account:create-article' %}" method="post" enctype="multipart/form-data">
+    <form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="form-row">
       <div class="form-group col-6 mb-0">
