--- a/templates/registration/home.html
+++ b/templates/registration/home.html
@@ -18,6 +18,7 @@
                 </div>
               </div>
               <!-- /.card-header -->
+              {% if articles %}
               <div class="card-body table-responsive p-0">
                 <table class="table table-hover">
                   <thead>
@@ -65,6 +66,9 @@
                   </tbody>
                 </table>
               </div>
+              {% else %}
+                  <h3 class="text text-center text-warning">محتوایی برای شما یافت نشد!</h3>
+              {% endif %}
               <!-- /.card-body -->
             </div>
             <!-- /.card -->
