--- a/templates/registration/_auth_base.html
+++ b/templates/registration/_auth_base.html
@@ -7,13 +7,13 @@
     <title>{% block title %}{% endblock %}</title>
     <!-- font---------------------------------------->
     <link rel="stylesheet" href="{% static 'registration/_auth/css/vendor/font-awesome.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/vendor/materialdesignicons.css' %}">
+    <link rel="stylesheet" href="{% static 'registration/_auth/css/vendor/materialdesignicons.css' %}">
     <!-- plugin-------------------------------------->
-    <link rel="stylesheet" href="{% static 'css/vendor/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'css/vendor/owl.carousel.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/vendor/noUISlider.min.css' %}">
+    <link rel="stylesheet" href="{% static 'registration/_auth/css/vendor/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'registration/_auth/css/vendor/owl.carousel.min.css' %}">
+    <link rel="stylesheet" href="{% static 'registration/_auth/css/vendor/noUISlider.min.css' %}">
     <!-- main-style---------------------------------->
-    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" href="{% static 'registration/_auth/css/main.css' %}">
 </head>
 <body>
 
